--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.1</string>
+	<string>1.0.2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
@@ -37,10 +37,12 @@
 	</array>
 	<key>CFBundleIconFiles</key>
 	<array>
+		<string>Icon@2x.png</string>
 		<string>icon.png</string>
 		<string>Icon-60@2x.png</string>
 		<string>Icon-Small@2x.png</string>
 		<string>Icon-Small.png</string>
+		<string>Icon-Small-40@2x.png</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
